# java2python-bootcamp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  playground.py  pyproject.toml
src/py100days/: __init__.py  app.py
src/py100days/days/: __init__.py
src/py100days/days/day01/: __init__.py  task.py
src/py100days/days/day02/: __init__.py  task.py
src/py100days/days/day03/: __init__.py  task.py
src/py100days/days/day04/: task.py
src/py100days/days/day05/: task.py
src/py100days/days/day06/: task.py
src/py100days/days/day07/: task.py
src/py100days/days/day08/: task.py
src/py100days/days/day09/: task.py
src/py100days/days/day10/: task.py
src/py100days/days/day100/: task.py
src/py100days/days/day11/: task.py
src/py100days/days/day12/: task.py
src/py100days/days/day13/: task.py
src/py100days/days/day14/: task.py
src/py100days/days/day15/: task.py
src/py100days/days/day16/: task.py
src/py100days/days/day17/: task.py
src/py100days/days/day18/: task.py
src/py100days/days/day19/: task.py
src/py100days/days/day20/: task.py
src/py100days/days/day21/: task.py
src/py100days/days/day22/: task.py
src/py100days/days/day23/: task.py
src/py100days/days/day24/: task.py
src/py100days/days/day25/: task.py
src/py100days/days/day26/: task.py
src/py100days/days/day27/: task.py
src/py100days/days/day28/: task.py
src/py100days/days/day29/: task.py
src/py100days/days/day30/: task.py
src/py100days/days/day31/: task.py
src/py100days/days/day32/: task.py
src/py100days/days/day33/: task.py
tests/: test_app.py
(+66 files in other folders)
