[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "py100days"
version = "0.1.0"
description = "Learning and production-ready Python project structure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pals" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "tox>=4.16",
]

[project.scripts]
py100days = "py100days.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=py100days --cov-report=term-missing"
testpaths = ["tests"]
